# restest

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: checks.yml
examples/: user_server.rs  user_server_test.rs  v2_api_example.rs
restest_macros/: Cargo.toml  README.md
restest_macros/src/: lib.rs
src/: __private.rs  context.rs  lib.rs  request.rs  url.rs
tests/: setup.rs
tests/ok/: json_pattern_array.rs  json_pattern_binding.rs  json_pattern_number.rs  json_pattern_string.rs  json_pattern_untyped_object.rs
