[package]
name = "restest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
restest_macros = { path = "./restest_macros" }
serde = { version = "1.0" }
serde_json = "1.0"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
restest = { path = ".", features = ["nightly"] }
serde = { version = "1.0", features = ["derive"] }
trybuild = "1.0"
warp = "0.3"

[features]
nightly = []
