[package]
name = "restest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
reqwest = { version = "0.11", features = ["json"] }
restest_macros = { path = "./restest_macros" }
serde = "1.0"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
trybuild = "1.0"
warp = "0.3"

# TODO: once the *old* assert_api is deprecated, remove the nightly feature
restest = { path = ".", features = ["nightly"] }

[features]
nightly = []
