[package]
name = "restest"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Black-box integration test for REST APIs in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dep_doc = "0.1"
http = "0.2"
reqwest = { version = "0.11", features = ["json"] }
restest_macros = "0.1.0"
serde = "1.0"
anyhow = "1.0.58"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
trybuild = "1.0"
warp = "0.3"
