[package]
name = "restest_macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macros used by the restest crate"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["visit", "visit-mut", "full"] }
